Add test API and update Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
   "rewrites": [
     {
+      "source": "/test-api",
+      "destination": "/api/test"
+    },
+    {
       "source": "/api/:path*",
-      "destination": "https://46.101.49.168/:path*"
+      "destination": "http://46.101.49.168/:path*"
     }
   ]
 }
