--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.9.0",
     "element-plus": "^2.10.1",
     "json-server": "^1.0.0-beta.3",
-    "pinia": "^3.0.1",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "vue": "^3.5.13",
     "vue-pdf-embed": "^2.1.2",
     "vue-router": "^4.5.0"
