--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "element-plus": "^2.10.1",
     "json-server": "^1.0.0-beta.3",
+    "node-fetch": "^3.3.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "vue": "^3.5.13",
